[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/items/cabinet.png" type="Texture" id=1]
[ext_resource path="res://entities/items/cabinet/cabinet.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/items/Porta_do_armario.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "close",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[node name="Cabinet" type="Area2D"]
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
shape = SubResource( 5 )

[node name="Animated" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "close"

[node name="OpenFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Cabinet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Cabinet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Cabinet_body_exited"]
[connection signal="animation_finished" from="Animated" to="." method="_on_Animated_animation_finished"]
